--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="card">
+  <div  role="region" aria-labelledby="card-heading" class="card" >
     <img src="./images/image-equilibrium.jpg" alt="Equilibraim-img">
     <h3>Equillibrium #3429</h3>
     <p>Our Equilibruim cllection promotes balance and calm.</p>
